# JAX-amR

./: .gitignore  GEMINI.md  README.md  compare.py  pyproject.toml  requirements.txt  tech-report.md  tests.py
.github/workflows/: tests.yml
amr/: adaptive_patch.py  adaptive_step.py  composite_step.py  gradient.py  interpolate.py  patch.py
analysis/: comparison.py  convergence.py
config/: params.py
docs/: tech-report.md
ioutils/: checkpoint.py  vtk_writer.py
runs/: compare.py  run_amr.py  run_composite_amr.py  run_uniform.py  viz_utils.py
runs/Diffrential/: optimise_p1.py  optimise_p2.py  optimise_p3.py
solver/: cn_step.py  grid.py  ops.py
src/amr/: __init__.py  adaptive_patch.py  adaptive_step.py  cells.py  composite_step.py  gradient.py  interpolate.py  patch.py  thresholds.py
src/analysis/: convergence.py  metrics.py
src/config/: params.py
src/ioutils/: __init__.py  checkpoint.py  vtk_writer.py
src/solver/: __init__.py  cn_step.py  grid.py  laser_source.py
src/viz/: __init__.py  amr_overlay.py  crosssection.py  heatmap.py  snapshots.py
tests/: test_amr.py  test_amr_patch.py  test_config.py  test_gradient.py  test_ioutils.py  test_uniform.py  test_viz.py
viz/: amr_overlay.py  animate.py  heatmap.py
